benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Zeroes_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Zeroes.rs
Time: 2025-09-15 19:11:53

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:96:19
   |
96 |     let mut res = 1nat;
   |                   ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:32:17
   |
32 |         Int2Str((n - 1) / 2).push('1')
   |         ------- ^^^^^^^^^^^ expected `nat`, found `int`
   |         |
   |         arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:24:9
   |
24 | spec fn Int2Str(n: nat) -> Seq<char>
   |         ^^^^^^^ ------

error[E0277]: can't compare `{integer}` with `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:99:13
   |
99 |     while i < sy@.len()
   |             ^ no implementation for `{integer} < vstd::prelude::nat` and `{integer} > vstd::prelude::nat`
   |
   = help: the trait `std::cmp::PartialOrd<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::cmp::PartialOrd<Rhs>`:
             f128
             f16
             f32
             f64
             i128
             i16
             i32
             i64
           and 8 others

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:104:22
    |
104 |         let bit = sy@[i];
    |                      ^^^

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:113:42
    |
113 |     let mut vec_res = Vec::with_capacity(bin_res.len());
    |                       ------------------ ^^^^^^^^^^^^^ expected `usize`, found `nat`
    |                       |
    |                       arguments to this function are incorrect
    |
note: associated function defined here
   --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/alloc/src/vec/mod.rs:494:12

error[E0277]: can't compare `{integer}` with `vstd::prelude::nat`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:115:13
    |
115 |     while j < bin_res.len()
    |             ^ no implementation for `{integer} < vstd::prelude::nat` and `{integer} > vstd::prelude::nat`
    |
    = help: the trait `std::cmp::PartialOrd<vstd::prelude::nat>` is not implemented for `{integer}`
    = help: the following other types implement trait `std::cmp::PartialOrd<Rhs>`:
              f128
              f16
              f32
              f64
              i128
              i16
              i32
              i64
            and 8 others

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:120:29
    |
120 |         vec_res.push(bin_res[j]);
    |                             ^^^

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308, E0608.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error: invalid suffix `nat` for number literal
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:96:19
   |
96 |     let mut res = 1nat;
   |                   ^^^^ invalid suffix `nat`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:32:17
   |
32 |         Int2Str((n - 1) / 2).push('1')
   |         ------- ^^^^^^^^^^^ expected `nat`, found `int`
   |         |
   |         arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:24:9
   |
24 | spec fn Int2Str(n: nat) -> Seq<char>
   |         ^^^^^^^ ------

error[E0277]: can't compare `{integer}` with `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:99:13
   |
99 |     while i < sy@.len()
   |             ^ no implementation for `{integer} < vstd::prelude::nat` and `{integer} > vstd::prelude::nat`
   |
   = help: the trait `std::cmp::PartialOrd<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::cmp::PartialOrd<Rhs>`:
             f128
             f16
             f32
             f64
             i128
             i16
             i32
             i64
           and 8 others

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:104:22
    |
104 |         let bit = sy@[i];
    |                      ^^^

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:113:42
    |
113 |     let mut vec_res = Vec::with_capacity(bin_res.len());
    |                       ------------------ ^^^^^^^^^^^^^ expected `usize`, found `nat`
    |                       |
    |                       arguments to this function are incorrect
    |
note: associated function defined here
   --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/alloc/src/vec/mod.rs:494:12

error[E0277]: can't compare `{integer}` with `vstd::prelude::nat`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:115:13
    |
115 |     while j < bin_res.len()
    |             ^ no implementation for `{integer} < vstd::prelude::nat` and `{integer} > vstd::prelude::nat`
    |
    = help: the trait `std::cmp::PartialOrd<vstd::prelude::nat>` is not implemented for `{integer}`
    = help: the following other types implement trait `std::cmp::PartialOrd<Rhs>`:
              f128
              f16
              f32
              f64
              i128
              i16
              i32
              i64
            and 8 others

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Zeroes_impl.rs:120:29
    |
120 |         vec_res.push(bin_res[j]);
    |                             ^^^

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308, E0608.
For more information about an error, try `rustc --explain E0277`.
